--- a/examples/config/mvc/export_gif_example.yaml
+++ b/examples/config/mvc/export_gif_example.yaml
@@ -1,10 +1,10 @@
 scene:
   ANIMATED_CHARACTERS:
-    - character_cfg: examples/characters/char3/char_cfg.yaml
-      motion_cfg: examples/config/motion/dab.yaml
-      retarget_cfg: examples/config/retarget/fair1_ppf.yaml
+    - character_cfg: examples/characters/char1/char_cfg.yaml
+      motion_cfg: examples/config/motion/taunt.yaml
+      retarget_cfg: examples/config/retarget/mixamo_fff.yaml
 controller:
   MODE: video_render
-  OUTPUT_VIDEO_PATH: ./video.gif
+  OUTPUT_VIDEO_PATH: ./taunt.gif
 view:
   USE_MESA: True
