--- a/examples/config/mvc/export_mp4_example.yaml
+++ b/examples/config/mvc/export_mp4_example.yaml
@@ -1,7 +1,7 @@
 scene:
   ANIMATED_CHARACTERS:
     - character_cfg: examples/characters/char1/char_cfg.yaml
-      motion_cfg: examples/config/motion/runningjump.yaml
+      motion_cfg: examples/config/motion/runningjump_.yaml
       retarget_cfg: examples/config/retarget/mixamo_fff.yaml
 view:
   CAMERA_POS: [2.0, 0.7, 8.0]
@@ -9,5 +9,5 @@ view:
   USE_MESA: True
 controller:
   MODE: video_render
-  OUTPUT_VIDEO_PATH: ./runningjump.mp4
+  OUTPUT_VIDEO_PATH: ./runningjump1.mp4
   OUTPUT_VIDEO_CODEC: avc1
