--- a/examples/config/mvc/export_gif_example.yaml
+++ b/examples/config/mvc/export_gif_example.yaml
@@ -1,10 +1,10 @@
 scene:
   ANIMATED_CHARACTERS:
-    - character_cfg: examples/characters/char1/char_cfg.yaml
-      motion_cfg: examples/config/motion/runningjump.yaml
-      retarget_cfg: examples/config/retarget/mixamo_fff.yaml
+    - character_cfg: examples/dino/char_cfg.yaml
+      motion_cfg: examples/config/motion/wave_hello.yaml
+      retarget_cfg: examples/config/retarget/fair1_ppf.yaml
 controller:
   MODE: video_render
-  OUTPUT_VIDEO_PATH: ./test.gif
+  OUTPUT_VIDEO_PATH: ./.examples/wave_hello.gif
 view:
   USE_MESA: True
