--- a/examples/config/mvc/export_gif_example.yaml
+++ b/examples/config/mvc/export_gif_example.yaml
@@ -1,10 +1,10 @@
 scene:
   ANIMATED_CHARACTERS:
     - character_cfg: examples/dino/char_cfg.yaml
-      motion_cfg: examples/config/motion/wave_hello.yaml
-      retarget_cfg: examples/config/retarget/fair1_ppf.yaml
+      motion_cfg: examples/config/motion/lala.yaml
+      retarget_cfg: examples/config/retarget/cmu1_pfp_copy.yaml
 controller:
   MODE: video_render
-  OUTPUT_VIDEO_PATH: ./.examples/wave_hello.gif
+  OUTPUT_VIDEO_PATH: ./.examples/lala.gif
 view:
   USE_MESA: True
